packages/kit/test/apps/basics/src/routes/errors/load-server.svelte
<script context="module">
	/** @type {import('@dishuostec/kit').Load} */
	export async function load() {
		throw new Error('Crashing now');
	}
</script>
